<resources>
    <string name="app_name">Rose Coffee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_bar_my_delivery_tag">My Delivery</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_error">Login Error!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="developer_name1">Jerry Qiu</string>
    <string name="developer_name2">Jim Yoon</string>
    <string name="about_text">Order Coffee!\nand\nWait in your Room!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_title">Notification</string>
    <string name="setting_content">Receive new order notifications</string>
    <string name="loc_and_time">Location and Time</string>
    <string name="order_detail">Order Detail</string>
    <string name="conf_and_checkout">Confirm and Check Out</string>
    <string name="building_name"></string>
    <string name="room_name"></string>
    <string name="cus_main_building_hint">Location (Olin259)</string>
    <string name="order_detail_add_drink">Add a drink</string>
    <string name="order_detail_add_snack">Add a snack</string>
    <string name="login_with_rosefire">LOGIN WITH ROSEFIRE</string>
    <string name="add_drink">Add a new drink</string>
    <string name="add_drink_comment_hint">Comment on drink</string>
    <string name="add_snack">Add a new Snack</string>
    <string name="add_snack_comment_hint">Comment on Snack</string>
    <string name="cus_confirm_price">0.00</string>
    <string name="price">Price:</string>
    <string name="location">Location:</string>
    <string name="cus_confirm_location" />
    <string name="time">Time :</string>
    <string name="cus_confirm_time" />
    <string name="order">Order :</string>
    <string name="cus_confirm_order" />
    <string name="order_item_name" />
    <string name="action_logout">Log Out</string>
    <string name="order_item">item1</string>
    <string name="confirm_and_pay">Confirm and Pay</string>
    <string name="dialog_location_title">Where do you want to pick up your order?</string>
    <string name="location_name">Location Name</string>
    <string name="location_hint">ex. O259</string>
    <string name="Detailorder">Order:</string>
    <string name="unknown">unknown</string>
    <string name="Detaillocation">Location:</string>
    <string name="Detailtime">Time:</string>
    <string name="loading">loading</string>
    <string name="Detailcustomer">Customer:</string>
    <string name="finish">Finish</string>
    <string name="i_am_not_delivering">I am not delivering</string>
    <string name="Infoswitch">Switch</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">Name:</string>
    <string name="zhiqiang_qiu">Zhiqiang Qiu</string>
    <string name="email">Email:</string>
    <string name="qiuz_rose_hulman_edu">qiuz@rose-hulman.edu</string>

</resources>
