<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.rose_hulman.zhiqiangqiu.rosecoffee.fragment.ConfirmAndCheckOutFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/border_style"
        >
        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:gravity="left"
                android:layout_alignParentLeft="true"
                />
            <TextView
                android:id="@+id/cus_confirm_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/cus_confirm_location" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_alignParentLeft="true"
                />
            <TextView
                android:id="@+id/cus_confirm_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cus_confirm_time"
                android:layout_alignParentRight="true"

                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:layout_alignParentLeft="true"
                />
            <TextView
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/cus_confirm_order" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_alignParentLeft="true"
                />
            <TextView
                android:id="@+id/cus_confirm_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/cus_confirm_price"
                />
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confrim_status"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="22dp"
        />
    <ProgressBar
        android:layout_marginTop="30dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        />

</LinearLayout>
