<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:text="@string/dialog_location_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:text="@string/location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/location_hint"
            android:ems="10"
            android:id="@+id/location_name" />

    </LinearLayout>

</LinearLayout>