<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.rose_hulman.zhiqiangqiu.rosecoffee.fragment.AccountInformationFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:text="@string/i_am_not_delivering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/is_delivering_index_textview"
            android:textSize="18sp" />

        <Switch
            android:text="@string/Infoswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/is_delivering_switch"
            android:layout_alignTop="@+id/is_delivering_index_textview"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignTop="@id/is_delivering_index_textview"
            android:layout_marginTop="40dp"
            android:background="@color/grey" />



        <ImageButton
            android:layout_height="120dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/profile_photo_imagebutton"
            android:layout_marginTop="50dp"
            android:layout_alignTop="@id/is_delivering_index_textview"
            android:layout_centerHorizontal="true"
            android:layout_width="120dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_profile_photo"
            android:id="@+id/change_profile_image_textview"
            android:layout_below="@+id/profile_photo_imagebutton"
            android:textColor="@color/linkBlue"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/name"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/name_index_textview"
            android:layout_below="@+id/change_profile_image_textview" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:layout_alignTop="@+id/name_index_textview"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/name_edit_imagebutton" />

        <TextView
            android:text="@string/zhiqiang_qiu"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/name_edit_imagebutton"
            android:layout_marginRight="50dp"
            android:id="@+id/firstname_content_textview"
            android:layout_alignTop="@+id/name_index_textview" />

        <TextView
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/email_index_textview"
            android:layout_below="@+id/name_index_textview" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:layout_alignTop="@+id/email_index_textview"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/email_edit_imagebutton" />

        <TextView
            android:text="@string/qiuz_rose_hulman_edu"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/email_edit_imagebutton"
            android:layout_marginRight="50dp"
            android:id="@+id/email_content_textview"
            android:layout_alignTop="@+id/email_index_textview" />

    </RelativeLayout>

</FrameLayout>
